Fix contrast for date

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -77,6 +77,7 @@ body {
     --gray-light: 34, 41, 57;
     --gray-dark: 229, 233, 240;
     --black: 238, 238, 238;
+    --gray: 128, 144, 177;
 
     --gray-gradient: rgba(var(--gray-light), 50%), #0f1219;
   }
@@ -101,7 +102,7 @@ body {
 main {
   width: var(--content-width);
   max-width: calc(100% - 2rem);
-  margin: 0 auto;
+  margin-inline: auto;
   padding: var(--space-3xl) var(--space-md);
   flex: 1 0 auto;
 }
